project 7-data analysis

--- a/index.html
+++ b/index.html
@@ -383,20 +383,26 @@
                     </div>
                 </div>
                 <!-- Additional Projects (Hidden by Default) -->
+
+                <!-- Project 7: Data Analytics -->
                 <div class="col-lg-4 project-item hidden" data-category="data-analytics">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/coming.webp" alt="Project 7">
+                            <img src="images/Project-7.webp" alt="Project 7">
                         </div>
                         <div class="card-content">
-                            <h3>Coming Soon</h3>
-                            <p>This project description is coming soon. Stay tuned!</p>
+                            <h3>Investigating Netflix Movies</h3>
+                            <p>This project explores Netflix's vast collection of movies and TV shows through data-driven insights. Using exploratory
+                            data analysis (EDA) techniques, I examined content distribution by genre, country, release year, and duration to uncover
+                            viewing trends and production patterns.</p>
                             <div class="card-footer">
-                                <a href="#project" class="details-btn">Details</a>
+                                <a href="https://github.com/Cyber-Trinity/Data-Analysis/tree/main/Investigating%20Netflix%20Movies" class="details-btn">Details</a>
                             </div>
                         </div>
                     </div>
                 </div>
+
+                <!-- Project 8: Cybersecurity -->
                 <div class="col-lg-4 project-item hidden" data-category="cybersecurity">
                     <div class="card">
                         <div class="card-image">
