P3 SWMT link Update

--- a/index.html
+++ b/index.html
@@ -326,11 +326,12 @@
                         <div class="card-content">
                             <h3>Smart Water Management System</h3>
                             <p>
-                                An IoT-based system for monitoring and managing water resources efficiently. The solution
-                                used sensors to track water usage and detect anomalies, optimizing water distribution and conservation.
+                                The Smart Water Monitor (SWMT) is an IoT system that uses an Arduino to read water parameters (Temp, Level, Turbidity)
+                                and an ESP32 to send this data via MQTT to the cloud (like ThingSpeak). This setup enables remote viewing of live water
+                                conditions and allows users to send commands to control pumps from anywhere.
                             </p>
                             <div class="card-footer">
-                                <a href="#project" class="details-btn">Details</a>
+                                <a href="https://github.com/Cyber-Trinity/Internet-of-Things/tree/main/SWMT" class="details-btn">Details</a>
                             </div>
                         </div>
                     </div>
