SMWT description update

--- a/index.html
+++ b/index.html
@@ -324,11 +324,10 @@
                             <img src="images/project-3.webp" alt="Project 3">
                         </div>
                         <div class="card-content">
-                            <h3>Smart Water Management System</h3>
+                            <h3>Smart Water Management System (SWMT)</h3>
                             <p>
-                                The Smart Water Monitor (SWMT) is an IoT system that uses an Arduino to read water parameters (Temp, Level, Turbidity)
-                                and an ESP32 to send this data via MQTT to the cloud (like ThingSpeak). This setup enables remote viewing of live water
-                                conditions and allows users to send commands to control pumps from anywhere.
+                                An IoT-based system for monitoring and managing water resources efficiently. The solution used sensors to track water
+                                usage and detect anomalies, optimizing water distribution and conservation.
                             </p>
                             <div class="card-footer">
                                 <a href="https://github.com/Cyber-Trinity/Internet-of-Things/tree/main/SWMT" class="details-btn">Details</a>
