P4 Obtacle avoidance car link uodate

--- a/index.html
+++ b/index.html
@@ -343,10 +343,10 @@
                         </div>
                         <div class="card-content">
                             <h3>Automatic Obstacle Avoidance Car</h3>
-                            <p>Autonomous, IoT-powered vehicle, integrating ultrasonic sensors to create a robust
-                            obstacle-avoidance system.</p>
+                            <p>This Arduino-based project demonstrates an Autonomous Obstacle Avoidance Robot. The core functionality is enabling a mobile robot to navigate an environment independently by sensing obstacles,
+                            analyzing clear paths, and executing appropriate avoidance maneuvers.</p>
                             <div class="card-footer">
-                                <a href="#project" class="details-btn">Details</a>
+                                <a href="https://github.com/Cyber-Trinity/Internet-of-Things/tree/main/Automatic_Obstacle_Avoidance_Car" class="details-btn">Details</a>
                             </div>
                         </div>
                     </div>
