--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@
                         </div>
                         <div class="card-content">
                             <h3>Automatic Obstacle Avoidance Car</h3>
-                            <p>This Arduino-based project demonstrates an Autonomous Obstacle Avoidance Robot. The core functionality is enabling a mobile robot to navigate an environment independently by sensing obstacles,
-                            analyzing clear paths, and executing appropriate avoidance maneuvers.</p>
+                            <p>This Arduino-based project demonstrates an Autonomous Obstacle Avoidance Robot. The system is designed to navigate an environment independently by sensing its surroundings and making real-time
+                            movement decisions.</p>
                             <div class="card-footer">
                                 <a href="https://github.com/Cyber-Trinity/Internet-of-Things/tree/main/Automatic_Obstacle_Avoidance_Car" class="details-btn">Details</a>
                             </div>
