--- a/index.html
+++ b/index.html
@@ -373,11 +373,12 @@
                             <img src="images/project-6.webp" alt="Project 6">
                         </div>
                         <div class="card-content">
-                            <h3>ParcelVault, The Smart IoT Box for Secure Package Delivery</h3>
+                            <h3>ParcelVault</h3>
+                            <h4>The Smart IoT Box for Secure Package Delivery</h4>
                             <p>A smart box for secure package delivery designed to address
                             critical challenges in last-mile logistics, including package theft, missed deliveries, and environmental damage.</p>
                             <div class="card-footer">
-                                <a href="#project" class="details-btn">Details</a>
+                                <a href="https://github.com/Cyber-Trinity/Internet-of-Things/tree/main/ParcelVault" class="details-btn">Details</a>
                             </div>
                         </div>
                     </div>
