Project 6 title update

--- a/index.html
+++ b/index.html
@@ -373,8 +373,7 @@
                             <img src="images/project-6.webp" alt="Project 6">
                         </div>
                         <div class="card-content">
-                            <h3>ParcelVault</h3>
-                            <h4>The Smart IoT Box for Secure Package Delivery</h4>
+                            <h3>ParcelVault, The Smart IoT Box for Secure Package Delivery</h3>
                             <p>A smart box for secure package delivery designed to address
                             critical challenges in last-mile logistics, including package theft, missed deliveries, and environmental damage.</p>
                             <div class="card-footer">
