--- a/index.html
+++ b/index.html
@@ -664,6 +664,13 @@
                                 <i class="fas fa-graduation-cap fa-stack-1x" aria-hidden="true"></i>
                             </a>
                         </span>
+                        <span class="fa-stack">
+                            <a href="https://www.kaggle.com/cybertrinity" target="_blank" rel="noopener">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fab fa-kaggle fa-stack-1x" aria-hidden="true"></i>
+                            </a>
+                        </span>
+                        
                     </div> <!-- end of social-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
