--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © 2025 Cyber-Trinity — Built with passion for Security, Data, and IoT.</p>
+                    <p class="p-small">Copyright © 2025 Cyber-Trinity | Built with passion for Data, Security, and IoT.</p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
