Resume section update

--- a/index.html
+++ b/index.html
@@ -149,12 +149,17 @@
                         <div class="time">Aug. 2021 - Jun. 2025</div>
                         <h6>Jain University</h6>
                         <p>B.Tech Computer Science & Engineering</p>
+                        <h6>Resume/CV</h6>
+                        <p>Check my full resume <a href="https://drive.google.com/file/d/1Z_e_JG4Tr8JK0En44MdZl2ms88NzBlJA/view?usp=sharing" target="_blank">here</a></p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
                     <div class="text-container third">
                         <h3>Experience</h3>
-                        <div class="time">Mar. 2024 - Sep. 202024</div>
+                        <div class="time">Nov. 2025 - Present</div>
+                        <h6>CEET (Togo Electric Energy Company)</h6>
+                        <p>Network and Systems Administrator Intern</p>
+                        <div class="time">Mar. 2024 - Sep. 2024</div>
                         <h6>Innodata</h6>
                         <p>AI Model Evaluator Intern</p>
                         <div class="time">Jun.  2023 - Dec. 2023</div>
