project link update

--- a/index.html
+++ b/index.html
@@ -314,11 +314,12 @@
                         <div class="card-content">
                             <h3>Intelligent Threat Extractor</h3>
                             <p>
-                                A script that automates the extraction of threat intelligence from cybersecurity reports. It identifies
-                                IoCs, TTPs, malware names, threat actors, and targeted entities, saving the extracted data in JSON format for further analysis.
+                                It's tool that automates the extraction of Indicators of Compromise (IoCs), Tactics, Techniques, and
+                                Procedures (TTPs), malware, threat actors, and targeted entities from cybersecurity reports, producing structured JSON
+                                data for advanced analysis and threat response.
                             </p>
                             <div class="card-footer">
-                                <a href="#project" class="details-btn">Details</a>
+                                <a href="https://github.com/Cyber-Trinity/Cybersecurity/tree/main/Intelligent_Threat_Extractor" class="details-btn">Details</a>
                             </div>
                         </div>
                     </div>
