Update the filtering

--- a/index.html
+++ b/index.html
@@ -76,15 +76,22 @@
                         <a class="nav-link page-scroll" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#projects" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
+                        <a class="nav-link dropdown-toggle" href="#projects" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">Projects
+                        </a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item page-scroll" href="#projects?filter=data-analytics">Data Analysis</a>
+                            <a class="dropdown-item page-scroll" href="#projects?filter=data-analytics" data-filter="data-analytics">Data
+                                Analysis
+                            </a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="#projects?filter=cybersecurity">Cybersecurity</a>
+                            <a class="dropdown-item page-scroll" href="#projects?filter=cybersecurity"
+                                data-filter="cybersecurity">Cybersecurity
+                            </a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="#projects?filter=iot">Internet of Things</a>
+                            <a class="dropdown-item page-scroll" href="#projects?filter=iot" data-filter="iot">Internet of Things</a>
                         </div>
                     </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#contact">Contact</a>
                     </li>
@@ -425,8 +432,9 @@
                     </div>
                 </div>
 
-            <!-- View More Button -->
-            <button id="view-more" class="btn-view-more">View More</button>
+                <!-- View More Button -->
+                <button id="view-more" class="btn-view-more">View More</button>
+            </div>
         </div>
     </div>
     <!-- end of projects -->
