--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 
     <!-- About-->
-    <div id="about" class="basic-1 bg-gray">
+    <div id="about" class="basic-1  ">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4">
@@ -143,7 +143,7 @@
                         <p>
                             I am an aspiring IT specialist passionate about integrating <span class="skill">Data Analytics</span>, <span class="skill">Cybersecurity</span>, and the
                             <span class="skill">Internet of Things</span> to build smart
-                            and secure systems that promote sustainability and innovation.
+                            and secure systems tha   t promote sustainability and innovation.
                         </p>
                         <p>
                             I enjoy working on projects that combine technology, creativity, and security to empower people and organizations
