Update of CSS style and section order

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                         <a class="nav-link page-scroll" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#services">Services</a>
+                        <a class="nav-link page-scroll" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#skills">Skills</a>
+                        <a class="nav-link page-scroll" href="#services">Services</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#projects" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
@@ -180,6 +180,45 @@
     </div> <!-- end of basic-1 -->
     <!-- end of about -->
 
+    <!-- Details -->
+    <div id="skills" class="split">
+        <div class="area-1"> </div>
+        <!-- end of area-1 on same line and no space between comments to eliminate margin white space -->
+        <div class="area-2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12"> <!-- Text Container -->
+                        <div class="text-container">
+                            <h2>Why Choose Me</h2>
+                            <p>
+                                I take time to understand every project and the people behind it. For me, technology is not
+                                just about building systems. It's about solving problems in a secure and intelligent
+                                way.
+                            </p>
+                            <h5>Languages I Speak</h5>
+                            <p>I am fluent in <span style="font-weight: bold;">English</span> and <span
+                                    style="font-weight: bold;">French</span>, and I can hold basic conversations in
+                                Spanish. My multilingual ability allows me to collaborate with international partners.</p>
+                            <h5>Development Skills</h5>
+                            <p>
+                                I use Python, Kali Linux, microcontrollers, modern frameworks and tools to build reliable and efficient projects. I turn ideas
+                                into sustainable solutions. I analyze and visualize data with Python, Power BI, Pandas, and Matplotlib, and secure systems
+                                by testing networks with Kali Linux, Wireshark, and penetration tools. I also design, connect sensors and program
+                                microcontrollers to build IoT systems.
+                            </p>
+                            <div class="icons-container"> <img src="images/details-icon-python.webp" alt="alternative"> <img
+                                    src="images/details-icon-power-bi.webp" alt="alternative"> <img
+                                    src="images/details-icon-linux.webp" alt="alternative"> <img
+                                    src="images/details-icon-metasploit.webp" alt="alternative"> <img
+                                    src="images/details-icon-arduino.webp" alt="alternative"> <img
+                                    src="images/details-icon-sensors.webp" alt="alternative"> </div>
+                            <!-- end of icons-container -->
+                        </div> <!-- end of text-container --> <!-- end of text container -->
+                    </div> <!-- end of col -->
+                </div> <!-- end of row -->
+            </div> <!-- end of container -->
+        </div> <!-- end of area-2 -->
+    </div> <!-- end of split --> <!-- end of details -->
 
     <!-- Services -->
     <div id="services" class="basic-2">
@@ -230,46 +269,6 @@
         </div> <!-- end of container -->
     </div> <!-- end of basic-2 -->
     <!-- end of services -->
-
-    <!-- Details -->
-    <div id="skills" class="split">
-        <div class="area-1"> </div>
-        <!-- end of area-1 on same line and no space between comments to eliminate margin white space -->
-        <div class="area-2 bg-gray">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12"> <!-- Text Container -->
-                        <div class="text-container">
-                            <h2>Why Choose Me</h2>
-                            <p>
-                                I take time to understand every project and the people behind it. For me, technology is not
-                                just about building systems. It's about solving problems in a secure and intelligent
-                                way.
-                            </p>
-                            <h5>Languages I Speak</h5>
-                            <p>I am fluent in <span style="font-weight: bold;">English</span> and <span
-                                    style="font-weight: bold;">French</span>, and I can hold basic conversations in
-                                Spanish. My multilingual ability allows me to collaborate with international partners.</p>
-                            <h5>Development Skills</h5>
-                            <p>
-                                I use Python, Kali Linux, microcontrollers, modern frameworks and tools to build reliable and efficient projects. I turn ideas
-                                into sustainable solutions. I analyze and visualize data with Python, Power BI, Pandas, and Matplotlib, and secure systems
-                                by testing networks with Kali Linux, Wireshark, and penetration tools. I also design, connect sensors and program
-                                microcontrollers to build IoT systems.
-                            </p>
-                            <div class="icons-container"> <img src="images/details-icon-python.webp" alt="alternative"> <img
-                                    src="images/details-icon-power-bi.webp" alt="alternative"> <img
-                                    src="images/details-icon-linux.webp" alt="alternative"> <img
-                                    src="images/details-icon-metasploit.webp" alt="alternative"> <img
-                                    src="images/details-icon-arduino.webp" alt="alternative"> <img
-                                    src="images/details-icon-sensors.webp" alt="alternative"> </div>
-                            <!-- end of icons-container -->
-                        </div> <!-- end of text-container --> <!-- end of text container -->
-                    </div> <!-- end of col -->
-                </div> <!-- end of row -->
-            </div> <!-- end of container -->
-        </div> <!-- end of area-2 -->
-    </div> <!-- end of split --> <!-- end of details -->
 
     <!-- Projects -->
     <div id="projects" class="basic-3">
@@ -603,7 +602,7 @@
 
 
     <!-- Contact -->
-    <div id="contact" class="form-1 bg-gray">
+    <div id="contact" class="form-1">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -645,7 +644,7 @@
 
 
     <!-- Footer -->
-    <div class="footer bg-gray">
+    <div class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -690,7 +689,7 @@
 
 
     <!-- Copyright -->
-    <div class="copyright bg-gray">
+    <div class="copyright">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
