question section update

--- a/index.html
+++ b/index.html
@@ -395,6 +395,7 @@
                         </div>
                     </div>
                 </div>
+                
                 <!-- Additional Projects (Hidden by Default) -->
 
                 <!-- Project 7: Data Analytics -->
@@ -562,7 +563,7 @@
                             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                                 <div class="card-body">
                                     I start by understanding the problem and the user's needs. Then I design a practical solution, develop and test it
-                                    carefully, and make sure it's secure, efficient, and scalable before deployment. I also focus on clear communication and collaboration throughout the process.
+                                    carefully. I make sure the solution is secure, efficient, and scalable before deployment. I also focus on clear communication and collaboration throughout the process.
                                 </div>
                             </div>
                         </div>
@@ -574,7 +575,7 @@
                             </div>
                             <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
                                 <div class="card-body">
-                                    I use a mix of tools and frameworks across my three domains, such as Python, SQL, data analytics libraries like Pandas and Matplotlib, Networking tools, Kali Linux, IoT sensors
+                                    I use a mix of tools and frameworks across my three domains, such as Python, SQL, data analytics libraries, Networking tools, Kali Linux, IoT sensors
                                     and microcontrollers. I choose the best technology based on the project's specific needs.
                                 </div>
                             </div>
