--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
                     <div class="text-container third">
-                        <h3>Experience</h3>
+                        <h3>Experiences</h3>
                         <div class="time">Nov. 2025 - Present</div>
                         <h6>CEET (Togo Electric Energy Company)</h6>
                         <p>Network and Systems Administrator Intern</p>
@@ -395,7 +395,7 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <!-- Additional Projects (Hidden by Default) -->
 
                 <!-- Project 7: Data Analytics -->
