Header SEO update

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="Yaovi Joel Djatassiba portfolio showcasing expertise in Cybersecurity, Data Analytics, and IoT. Building smart, secure, and data-driven systems to address global challenges.">
-    <meta name="author" content="djatassiba">
-    <meta name="keywords" content="Yaovi, Joel, Djatassiba, Data Analytics, IoT, IoT Developer, Data Analyst, IT Specialist, Smart Systems, Secure Systems, Technology Portfolio, portfolio, cybersecurity">
+    <meta name="author" content="Yaovi Joel DJATASSIBA">
+    <meta name="keywords" content="Yaovi Joel DJATASSIBA, Yaovi, Joel, Djatassiba, Data Analytics, IoT, IoT Developer, Data Analyst, IT Specialist, Smart Systems, Secure Systems, Technology Portfolio, portfolio, cybersecurity">
 
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
-    <meta property="og:site_name" content="Joel Djatassiba Portfolio" /> <!-- website name -->
+    <meta property="og:site_name" content="Joel Djatassiba" /> <!-- website name -->
     <meta property="og:site" content="https://cyber-trinity.github.io/joeldjatassiba/" /> <!-- website link -->
-    <meta property="og:title" content="Yaovi Joel Djatassiba Portfolio" />
+    <meta property="og:title" content="Yaovi Joel Djatassiba" />
     <!-- title shown in the shared post -->
     <meta property="og:description"
-        content="Explore Joel's portfolio showcasing projects in Cybersecurity, Data Analytics, and IoT." />
+        content="Joel is an IT Specialist passionate about IoT, Cybersecurity, and Data Analysis. His portfolio highlights innovative, and secure smart solutions." />
     <!-- description shown in the shared post -->
     <meta property="og:image" content="https://cyber-trinity.github.io/joeldjatassiba/images/header-background-mobile.jpg" />
     <!-- image link, make sure it's jpg -->
