update of details

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                             <h5>Development Skills</h5>
                             <p>
                                 I use Python, Kali Linux, microcontrollers, modern frameworks and tools to build reliable and efficient projects. I turn ideas
-                                into sustainable solutions. I analyze and visualize data with Python, Power BI, Pandas, and Matplotlib, and secure systems
+                                into sustainable solutions. I analyze and visualize data with Python, Power BI, Pandas, and Matplotlib. I secure systems
                                 by testing networks with Kali Linux, Wireshark, and penetration tools. I also design, connect sensors and program
                                 microcontrollers to build IoT systems.
                             </p>
