--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <div class="col-lg-4">
                     <div class="text-container third">
                         <h3>Experiences</h3>
-                        <div class="time">Nov. 2025 - Present</div>
+                        <div class="time">Nov. 2025 - Dec. 2025</div>
                         <h6>CEET (Togo Electric Energy Company)</h6>
                         <p>Network and Systems Administrator Intern</p>
                         <div class="time">Mar. 2024 - Sep. 2024</div>
